--- a/python_flask/测试.md
+++ b/python_flask/测试.md
@@ -1,5 +1,10 @@
 ## get
 
+GET：当client要从server中读取文档时，使用GET方法。GET方法要求服务器将URL定位的资源放在响应报文的数据部分，回送给client。
+
+使用GET方法时，请求参数和对应的值附加在URL后面，利用一个问号（"?"）代表URL的结尾与请求参数的开始，传递参数长度受限制，例如：  /index.jsp?id=100&op=bind
+
 with app.test_client() as c:
     rv = c.get('/?vodka=42')
     assert request.args['vodka'] == '42'
+
